@@ -13,6 +13,7 @@ packages actually installed on your system will be accessible.
 <HR>
 <H3>The IMGSRC package</H3>
 <UL>
+<LI><A HREF="man/img2google.html"> img2google</A> Create Google Earth KML tiles from the topo.11.1.img bathymetry grid
 <LI><A HREF="man/img2grd.html"> img2grd</A> Front-end Bourne script to img2mercgrd
 <LI><A HREF="man/img2mercgrd.html"> img2mercgrd</A> Extracting data from Sandwell/Smith altimetry solutions
 </UL>
@@ -52,9 +53,12 @@ packages actually installed on your system will be accessible.
 <HR>
 <H3>The MISC package</H3>
 <UL>
+<LI><A HREF="man/dimfilter.html"> dimfilter</A> Directional filtering of 2-D grdfiles in the space domain
+<LI><A HREF="man/gmt2kml.html"> gmt2kml</A> Convert GMT data tables to KML files for Google Earth
 <LI><A HREF="man/gmtdigitize.html"> gmtdigitize</A> Digitize map features using a large-format digitizer
 <LI><A HREF="man/gmtstitch.html"> gmtstitch</A> Combine line segments that share end-points
 <LI><A HREF="man/gmtdp.html"> gmtdp</A> Line reduction using the Douglas-Peucker algorithm
+<LI><A HREF="man/kml2gmt.html"> kml2gmt</A> Extract GMT data from a Google Earth KML file
 <LI><A HREF="man/makepattern.html"> makepattern</A> Make GMT color pattern from b/w pattern
 <LI><A HREF="man/psmegaplot.html"> psmegaplot</A> Make poster-size plot using tiling
 <LI><A HREF="man/nc2xy.html"> nc2xy</A> Convert netCDF column file to ASCII xy data
@@ -64,6 +68,7 @@ packages actually installed on your system will be accessible.
 <UL>
 <LI><A HREF="man/pssegy.html"> pssegy</A> Plot SEGY seismic data files in 2-D
 <LI><A HREF="man/pssegyz.html"> pssegyz</A> Plot SEGY seismic data files in 3-D
+<LI><A HREF="man/segy2grd.html"> segy2grd</A> Converting segy data to a GMT grid file
 </UL>
 <HR>
 <H3>The SPH package</H3>
@@ -90,6 +95,7 @@ packages actually installed on your system will be accessible.
 <LI><A HREF="man/x2sys_get.html"> x2sys_get</A> Find all track files in a given area
 <LI><A HREF="man/x2sys_init.html"> x2sys_init</A> Initialize a new index file database for track data
 <LI><A HREF="man/x2sys_list.html"> x2sys_list</A> Extract crossover information from data base
+<LI><A HREF="man/x2sys_merge.html"> x2sys_merge</A> Merge an updated COEs table into a main one
 <LI><A HREF="man/x2sys_put.html"> x2sys_put</A> Maintain index files database for track data
 <LI><A HREF="man/x2sys_report.html"> x2sys_report</A> Report crossover statistics for tracks
 <LI><A HREF="man/x2sys_solve.html"> x2sys_solve</A> Determine systematic corrections from crossovers
